Update AppCDS to Java 12